workspace/factorial/y.output
   0  $accept : ficheiro $end

   1  ficheiro : declaracoes
   2           |

   3  declaracoes : declaracao
   4              | declaracoes declaracao

   5  declaracao : pub cons tipo ptr IDENTIF init ';'
   6             | pub cons tipo ptr IDENTIF ';'

   7  $$1 :

   8  $$2 :

   9  declaracao : pub cons tipo ptr IDENTIF '(' $$1 parametros ')' $$2 corpop ';'

  10  $$3 :

  11  declaracao : pub cons tipo ptr IDENTIF '(' ')' $$3 corpo ';'
  12             | pub cons tipo ptr IDENTIF '(' ')' ';'
  13             | error ';'

  14  corpop :
  15         | corpo

  16  ptr :
  17      | '*'

  18  cons :
  19       | CONST

  20  pub :
  21      | PUBLIC

  22  tipo : VOID
  23       | INTEGER
  24       | STRING
  25       | NUMBER

  26  init : ATRIB INT
  27       | ATRIB '-' INT
  28       | ATRIB cons STRN
  29       | ATRIB NUM
  30       | ATRIB '-' NUM
  31       | ATRIB IDENTIF

  32  parametros : parametros ',' parametro
  33             | parametro

  34  parametro : tipo ptr IDENTIF

  35  pars2 : parametro ';'
  36        | pars2 parametro ';'

  37  corpo : '{' '}'
  38        | '{' pars2 '}'
  39        | '{' instrucoes '}'
  40        | '{' pars2 instrucoes '}'

  41  instrucoes : instrucao
  42             | instrucoes instrucao

  43  instrucao : IF expressao THEN instrucao
  44            | IF expressao THEN instrucao ELSE instrucao

  45  $$4 :

  46  $$5 :

  47  instrucao : DO $$4 instrucao $$5 WHILE expressao ';'

  48  $$6 :

  49  instrucao : FOR left_value IN expressao updown expressao step DO $$6 instrucao
  50            | expressao ';'
  51            | corpo
  52            | BREAK INT ';'
  53            | CONTINUE INT ';'
  54            | BREAK ';'
  55            | CONTINUE ';'
  56            | left_value '#' expressao ';'
  57            | error ';'

  58  updown : UPTO
  59         | DOWNTO

  60  step :
  61       | STEP expressao

  62  expressoes : expressoes ',' expressao
  63             | expressao

  64  expressao : INT
  65            | NUM
  66            | STRN
  67            | left_value
  68            | IDENTIF '(' expressoes ')'
  69            | IDENTIF '(' ')'
  70            | '(' expressao ')'
  71            | left_value ATRIB expressao
  72            | '-' expressao
  73            | DEC left_value
  74            | INC left_value
  75            | left_value INC
  76            | left_value DEC
  77            | expressao '*' expressao
  78            | expressao '/' expressao
  79            | expressao '%' expressao
  80            | expressao '+' expressao
  81            | expressao '-' expressao
  82            | expressao '>' expressao
  83            | expressao '<' expressao
  84            | expressao EQ expressao
  85            | expressao NE expressao
  86            | expressao GE expressao
  87            | expressao LE expressao
  88            | expressao '&' expressao
  89            | expressao '|' expressao
  90            | '~' expressao
  91            | expressao '!'
  92            | '&' left_value
  93            | '*' left_value

  94  left_value : IDENTIF
  95             | IDENTIF '[' expressao ']'

state 0
	$accept : . ficheiro $end  (0)
	ficheiro : .  (2)
	pub : .  (20)

	error  shift 1
	PUBLIC  shift 2
	$end  reduce 2
	VOID  reduce 20
	CONST  reduce 20
	INTEGER  reduce 20
	STRING  reduce 20
	NUMBER  reduce 20

	ficheiro  goto 3
	declaracoes  goto 4
	declaracao  goto 5
	pub  goto 6


state 1
	declaracao : error . ';'  (13)

	';'  shift 7
	.  error


state 2
	pub : PUBLIC .  (21)

	.  reduce 21


state 3
	$accept : ficheiro . $end  (0)

	$end  accept


state 4
	ficheiro : declaracoes .  (1)
	declaracoes : declaracoes . declaracao  (4)
	pub : .  (20)

	error  shift 1
	PUBLIC  shift 2
	$end  reduce 1
	VOID  reduce 20
	CONST  reduce 20
	INTEGER  reduce 20
	STRING  reduce 20
	NUMBER  reduce 20

	declaracao  goto 8
	pub  goto 6


state 5
	declaracoes : declaracao .  (3)

	.  reduce 3


state 6
	declaracao : pub . cons tipo ptr IDENTIF init ';'  (5)
	declaracao : pub . cons tipo ptr IDENTIF ';'  (6)
	declaracao : pub . cons tipo ptr IDENTIF '(' $$1 parametros ')' $$2 corpop ';'  (9)
	declaracao : pub . cons tipo ptr IDENTIF '(' ')' $$3 corpo ';'  (11)
	declaracao : pub . cons tipo ptr IDENTIF '(' ')' ';'  (12)
	cons : .  (18)

	CONST  shift 9
	VOID  reduce 18
	INTEGER  reduce 18
	STRING  reduce 18
	NUMBER  reduce 18

	cons  goto 10


state 7
	declaracao : error ';' .  (13)

	.  reduce 13


state 8
	declaracoes : declaracoes declaracao .  (4)

	.  reduce 4


state 9
	cons : CONST .  (19)

	.  reduce 19


state 10
	declaracao : pub cons . tipo ptr IDENTIF init ';'  (5)
	declaracao : pub cons . tipo ptr IDENTIF ';'  (6)
	declaracao : pub cons . tipo ptr IDENTIF '(' $$1 parametros ')' $$2 corpop ';'  (9)
	declaracao : pub cons . tipo ptr IDENTIF '(' ')' $$3 corpo ';'  (11)
	declaracao : pub cons . tipo ptr IDENTIF '(' ')' ';'  (12)

	VOID  shift 11
	INTEGER  shift 12
	STRING  shift 13
	NUMBER  shift 14
	.  error

	tipo  goto 15


state 11
	tipo : VOID .  (22)

	.  reduce 22


state 12
	tipo : INTEGER .  (23)

	.  reduce 23


state 13
	tipo : STRING .  (24)

	.  reduce 24


state 14
	tipo : NUMBER .  (25)

	.  reduce 25


state 15
	declaracao : pub cons tipo . ptr IDENTIF init ';'  (5)
	declaracao : pub cons tipo . ptr IDENTIF ';'  (6)
	declaracao : pub cons tipo . ptr IDENTIF '(' $$1 parametros ')' $$2 corpop ';'  (9)
	declaracao : pub cons tipo . ptr IDENTIF '(' ')' $$3 corpo ';'  (11)
	declaracao : pub cons tipo . ptr IDENTIF '(' ')' ';'  (12)
	ptr : .  (16)

	'*'  shift 16
	IDENTIF  reduce 16

	ptr  goto 17


state 16
	ptr : '*' .  (17)

	.  reduce 17


state 17
	declaracao : pub cons tipo ptr . IDENTIF init ';'  (5)
	declaracao : pub cons tipo ptr . IDENTIF ';'  (6)
	declaracao : pub cons tipo ptr . IDENTIF '(' $$1 parametros ')' $$2 corpop ';'  (9)
	declaracao : pub cons tipo ptr . IDENTIF '(' ')' $$3 corpo ';'  (11)
	declaracao : pub cons tipo ptr . IDENTIF '(' ')' ';'  (12)

	IDENTIF  shift 18
	.  error


state 18
	declaracao : pub cons tipo ptr IDENTIF . init ';'  (5)
	declaracao : pub cons tipo ptr IDENTIF . ';'  (6)
	declaracao : pub cons tipo ptr IDENTIF . '(' $$1 parametros ')' $$2 corpop ';'  (9)
	declaracao : pub cons tipo ptr IDENTIF . '(' ')' $$3 corpo ';'  (11)
	declaracao : pub cons tipo ptr IDENTIF . '(' ')' ';'  (12)

	ATRIB  shift 19
	'('  shift 20
	';'  shift 21
	.  error

	init  goto 22


state 19
	init : ATRIB . INT  (26)
	init : ATRIB . '-' INT  (27)
	init : ATRIB . cons STRN  (28)
	init : ATRIB . NUM  (29)
	init : ATRIB . '-' NUM  (30)
	init : ATRIB . IDENTIF  (31)
	cons : .  (18)

	INT  shift 23
	NUM  shift 24
	IDENTIF  shift 25
	CONST  shift 9
	'-'  shift 26
	STRN  reduce 18

	cons  goto 27


state 20
	declaracao : pub cons tipo ptr IDENTIF '(' . $$1 parametros ')' $$2 corpop ';'  (9)
	declaracao : pub cons tipo ptr IDENTIF '(' . ')' $$3 corpo ';'  (11)
	declaracao : pub cons tipo ptr IDENTIF '(' . ')' ';'  (12)
	$$1 : .  (7)

	')'  shift 28
	VOID  reduce 7
	INTEGER  reduce 7
	STRING  reduce 7
	NUMBER  reduce 7

	$$1  goto 29


state 21
	declaracao : pub cons tipo ptr IDENTIF ';' .  (6)

	.  reduce 6


state 22
	declaracao : pub cons tipo ptr IDENTIF init . ';'  (5)

	';'  shift 30
	.  error


state 23
	init : ATRIB INT .  (26)

	.  reduce 26


state 24
	init : ATRIB NUM .  (29)

	.  reduce 29


state 25
	init : ATRIB IDENTIF .  (31)

	.  reduce 31


state 26
	init : ATRIB '-' . INT  (27)
	init : ATRIB '-' . NUM  (30)

	INT  shift 31
	NUM  shift 32
	.  error


state 27
	init : ATRIB cons . STRN  (28)

	STRN  shift 33
	.  error


state 28
	declaracao : pub cons tipo ptr IDENTIF '(' ')' . $$3 corpo ';'  (11)
	declaracao : pub cons tipo ptr IDENTIF '(' ')' . ';'  (12)
	$$3 : .  (10)

	';'  shift 34
	'{'  reduce 10

	$$3  goto 35


state 29
	declaracao : pub cons tipo ptr IDENTIF '(' $$1 . parametros ')' $$2 corpop ';'  (9)

	VOID  shift 11
	INTEGER  shift 12
	STRING  shift 13
	NUMBER  shift 14
	.  error

	tipo  goto 36
	parametro  goto 37
	parametros  goto 38


state 30
	declaracao : pub cons tipo ptr IDENTIF init ';' .  (5)

	.  reduce 5


state 31
	init : ATRIB '-' INT .  (27)

	.  reduce 27


state 32
	init : ATRIB '-' NUM .  (30)

	.  reduce 30


state 33
	init : ATRIB cons STRN .  (28)

	.  reduce 28


state 34
	declaracao : pub cons tipo ptr IDENTIF '(' ')' ';' .  (12)

	.  reduce 12


state 35
	declaracao : pub cons tipo ptr IDENTIF '(' ')' $$3 . corpo ';'  (11)

	'{'  shift 39
	.  error

	corpo  goto 40


state 36
	parametro : tipo . ptr IDENTIF  (34)
	ptr : .  (16)

	'*'  shift 16
	IDENTIF  reduce 16

	ptr  goto 41


state 37
	parametros : parametro .  (33)

	.  reduce 33


state 38
	declaracao : pub cons tipo ptr IDENTIF '(' $$1 parametros . ')' $$2 corpop ';'  (9)
	parametros : parametros . ',' parametro  (32)

	')'  shift 42
	','  shift 43
	.  error


state 39
	corpo : '{' . '}'  (37)
	corpo : '{' . pars2 '}'  (38)
	corpo : '{' . instrucoes '}'  (39)
	corpo : '{' . pars2 instrucoes '}'  (40)

	error  shift 44
	INT  shift 45
	NUM  shift 46
	IDENTIF  shift 47
	STRN  shift 48
	IF  shift 49
	VOID  shift 11
	DO  shift 50
	FOR  shift 51
	BREAK  shift 52
	CONTINUE  shift 53
	INTEGER  shift 12
	STRING  shift 13
	NUMBER  shift 14
	INC  shift 54
	DEC  shift 55
	'&'  shift 56
	'~'  shift 57
	'-'  shift 58
	'*'  shift 59
	'('  shift 60
	'{'  shift 39
	'}'  shift 61
	.  error

	left_value  goto 62
	expressao  goto 63
	corpo  goto 64
	instrucao  goto 65
	instrucoes  goto 66
	pars2  goto 67
	tipo  goto 36
	parametro  goto 68


state 40
	declaracao : pub cons tipo ptr IDENTIF '(' ')' $$3 corpo . ';'  (11)

	';'  shift 69
	.  error


state 41
	parametro : tipo ptr . IDENTIF  (34)

	IDENTIF  shift 70
	.  error


state 42
	declaracao : pub cons tipo ptr IDENTIF '(' $$1 parametros ')' . $$2 corpop ';'  (9)
	$$2 : .  (8)

	.  reduce 8

	$$2  goto 71


state 43
	parametros : parametros ',' . parametro  (32)

	VOID  shift 11
	INTEGER  shift 12
	STRING  shift 13
	NUMBER  shift 14
	.  error

	tipo  goto 36
	parametro  goto 72


state 44
	instrucao : error . ';'  (57)

	';'  shift 73
	.  error


state 45
	expressao : INT .  (64)

	.  reduce 64


state 46
	expressao : NUM .  (65)

	.  reduce 65


state 47
	expressao : IDENTIF . '(' expressoes ')'  (68)
	expressao : IDENTIF . '(' ')'  (69)
	left_value : IDENTIF .  (94)
	left_value : IDENTIF . '[' expressao ']'  (95)

	'('  shift 74
	'['  shift 75
	THEN  reduce 94
	DO  reduce 94
	STEP  reduce 94
	UPTO  reduce 94
	DOWNTO  reduce 94
	GE  reduce 94
	LE  reduce 94
	EQ  reduce 94
	NE  reduce 94
	INC  reduce 94
	DEC  reduce 94
	ATRIB  reduce 94
	'|'  reduce 94
	'&'  reduce 94
	'>'  reduce 94
	'<'  reduce 94
	'+'  reduce 94
	'-'  reduce 94
	'*'  reduce 94
	'/'  reduce 94
	'%'  reduce 94
	'!'  reduce 94
	')'  reduce 94
	']'  reduce 94
	';'  reduce 94
	','  reduce 94
	'#'  reduce 94


state 48
	expressao : STRN .  (66)

	.  reduce 66


state 49
	instrucao : IF . expressao THEN instrucao  (43)
	instrucao : IF . expressao THEN instrucao ELSE instrucao  (44)

	INT  shift 45
	NUM  shift 46
	IDENTIF  shift 47
	STRN  shift 48
	INC  shift 54
	DEC  shift 55
	'&'  shift 56
	'~'  shift 57
	'-'  shift 58
	'*'  shift 59
	'('  shift 60
	.  error

	left_value  goto 76
	expressao  goto 77


state 50
	instrucao : DO . $$4 instrucao $$5 WHILE expressao ';'  (47)
	$$4 : .  (45)

	.  reduce 45

	$$4  goto 78


state 51
	instrucao : FOR . left_value IN expressao updown expressao step DO $$6 instrucao  (49)

	IDENTIF  shift 79
	.  error

	left_value  goto 80


state 52
	instrucao : BREAK . INT ';'  (52)
	instrucao : BREAK . ';'  (54)

	INT  shift 81
	';'  shift 82
	.  error


state 53
	instrucao : CONTINUE . INT ';'  (53)
	instrucao : CONTINUE . ';'  (55)

	INT  shift 83
	';'  shift 84
	.  error


state 54
	expressao : INC . left_value  (74)

	IDENTIF  shift 79
	.  error

	left_value  goto 85


state 55
	expressao : DEC . left_value  (73)

	IDENTIF  shift 79
	.  error

	left_value  goto 86


state 56
	expressao : '&' . left_value  (92)

	IDENTIF  shift 79
	.  error

	left_value  goto 87


state 57
	expressao : '~' . expressao  (90)

	INT  shift 45
	NUM  shift 46
	IDENTIF  shift 47
	STRN  shift 48
	INC  shift 54
	DEC  shift 55
	'&'  shift 56
	'~'  shift 57
	'-'  shift 58
	'*'  shift 59
	'('  shift 60
	.  error

	left_value  goto 76
	expressao  goto 88


state 58
	expressao : '-' . expressao  (72)

	INT  shift 45
	NUM  shift 46
	IDENTIF  shift 47
	STRN  shift 48
	INC  shift 54
	DEC  shift 55
	'&'  shift 56
	'~'  shift 57
	'-'  shift 58
	'*'  shift 59
	'('  shift 60
	.  error

	left_value  goto 76
	expressao  goto 89


state 59
	expressao : '*' . left_value  (93)

	IDENTIF  shift 79
	.  error

	left_value  goto 90


state 60
	expressao : '(' . expressao ')'  (70)

	INT  shift 45
	NUM  shift 46
	IDENTIF  shift 47
	STRN  shift 48
	INC  shift 54
	DEC  shift 55
	'&'  shift 56
	'~'  shift 57
	'-'  shift 58
	'*'  shift 59
	'('  shift 60
	.  error

	left_value  goto 76
	expressao  goto 91


state 61
	corpo : '{' '}' .  (37)

	.  reduce 37


state 62
	instrucao : left_value . '#' expressao ';'  (56)
	expressao : left_value .  (67)
	expressao : left_value . ATRIB expressao  (71)
	expressao : left_value . INC  (75)
	expressao : left_value . DEC  (76)

	INC  shift 92
	DEC  shift 93
	ATRIB  shift 94
	'#'  shift 95
	GE  reduce 67
	LE  reduce 67
	EQ  reduce 67
	NE  reduce 67
	'|'  reduce 67
	'&'  reduce 67
	'>'  reduce 67
	'<'  reduce 67
	'+'  reduce 67
	'-'  reduce 67
	'*'  reduce 67
	'/'  reduce 67
	'%'  reduce 67
	'!'  reduce 67
	';'  reduce 67


state 63
	instrucao : expressao . ';'  (50)
	expressao : expressao . '*' expressao  (77)
	expressao : expressao . '/' expressao  (78)
	expressao : expressao . '%' expressao  (79)
	expressao : expressao . '+' expressao  (80)
	expressao : expressao . '-' expressao  (81)
	expressao : expressao . '>' expressao  (82)
	expressao : expressao . '<' expressao  (83)
	expressao : expressao . EQ expressao  (84)
	expressao : expressao . NE expressao  (85)
	expressao : expressao . GE expressao  (86)
	expressao : expressao . LE expressao  (87)
	expressao : expressao . '&' expressao  (88)
	expressao : expressao . '|' expressao  (89)
	expressao : expressao . '!'  (91)

	GE  shift 96
	LE  shift 97
	EQ  shift 98
	NE  shift 99
	'|'  shift 100
	'&'  shift 101
	'>'  shift 102
	'<'  shift 103
	'+'  shift 104
	'-'  shift 105
	'*'  shift 106
	'/'  shift 107
	'%'  shift 108
	'!'  shift 109
	';'  shift 110
	.  error


state 64
	instrucao : corpo .  (51)

	.  reduce 51


state 65
	instrucoes : instrucao .  (41)

	.  reduce 41


state 66
	corpo : '{' instrucoes . '}'  (39)
	instrucoes : instrucoes . instrucao  (42)

	error  shift 44
	INT  shift 45
	NUM  shift 46
	IDENTIF  shift 47
	STRN  shift 48
	IF  shift 49
	DO  shift 50
	FOR  shift 51
	BREAK  shift 52
	CONTINUE  shift 53
	INC  shift 54
	DEC  shift 55
	'&'  shift 56
	'~'  shift 57
	'-'  shift 58
	'*'  shift 59
	'('  shift 60
	'{'  shift 39
	'}'  shift 111
	.  error

	left_value  goto 62
	expressao  goto 63
	corpo  goto 64
	instrucao  goto 112


state 67
	pars2 : pars2 . parametro ';'  (36)
	corpo : '{' pars2 . '}'  (38)
	corpo : '{' pars2 . instrucoes '}'  (40)

	error  shift 44
	INT  shift 45
	NUM  shift 46
	IDENTIF  shift 47
	STRN  shift 48
	IF  shift 49
	VOID  shift 11
	DO  shift 50
	FOR  shift 51
	BREAK  shift 52
	CONTINUE  shift 53
	INTEGER  shift 12
	STRING  shift 13
	NUMBER  shift 14
	INC  shift 54
	DEC  shift 55
	'&'  shift 56
	'~'  shift 57
	'-'  shift 58
	'*'  shift 59
	'('  shift 60
	'{'  shift 39
	'}'  shift 113
	.  error

	left_value  goto 62
	expressao  goto 63
	corpo  goto 64
	instrucao  goto 65
	instrucoes  goto 114
	tipo  goto 36
	parametro  goto 115


state 68
	pars2 : parametro . ';'  (35)

	';'  shift 116
	.  error


state 69
	declaracao : pub cons tipo ptr IDENTIF '(' ')' $$3 corpo ';' .  (11)

	.  reduce 11


state 70
	parametro : tipo ptr IDENTIF .  (34)

	.  reduce 34


state 71
	declaracao : pub cons tipo ptr IDENTIF '(' $$1 parametros ')' $$2 . corpop ';'  (9)
	corpop : .  (14)

	'{'  shift 39
	';'  reduce 14

	corpo  goto 117
	corpop  goto 118


state 72
	parametros : parametros ',' parametro .  (32)

	.  reduce 32


state 73
	instrucao : error ';' .  (57)

	.  reduce 57


state 74
	expressao : IDENTIF '(' . expressoes ')'  (68)
	expressao : IDENTIF '(' . ')'  (69)

	INT  shift 45
	NUM  shift 46
	IDENTIF  shift 47
	STRN  shift 48
	INC  shift 54
	DEC  shift 55
	'&'  shift 56
	'~'  shift 57
	'-'  shift 58
	'*'  shift 59
	'('  shift 60
	')'  shift 119
	.  error

	left_value  goto 76
	expressao  goto 120
	expressoes  goto 121


state 75
	left_value : IDENTIF '[' . expressao ']'  (95)

	INT  shift 45
	NUM  shift 46
	IDENTIF  shift 47
	STRN  shift 48
	INC  shift 54
	DEC  shift 55
	'&'  shift 56
	'~'  shift 57
	'-'  shift 58
	'*'  shift 59
	'('  shift 60
	.  error

	left_value  goto 76
	expressao  goto 122


state 76
	expressao : left_value .  (67)
	expressao : left_value . ATRIB expressao  (71)
	expressao : left_value . INC  (75)
	expressao : left_value . DEC  (76)

	INC  shift 92
	DEC  shift 93
	ATRIB  shift 94
	THEN  reduce 67
	DO  reduce 67
	STEP  reduce 67
	UPTO  reduce 67
	DOWNTO  reduce 67
	GE  reduce 67
	LE  reduce 67
	EQ  reduce 67
	NE  reduce 67
	'|'  reduce 67
	'&'  reduce 67
	'>'  reduce 67
	'<'  reduce 67
	'+'  reduce 67
	'-'  reduce 67
	'*'  reduce 67
	'/'  reduce 67
	'%'  reduce 67
	'!'  reduce 67
	')'  reduce 67
	']'  reduce 67
	';'  reduce 67
	','  reduce 67


state 77
	instrucao : IF expressao . THEN instrucao  (43)
	instrucao : IF expressao . THEN instrucao ELSE instrucao  (44)
	expressao : expressao . '*' expressao  (77)
	expressao : expressao . '/' expressao  (78)
	expressao : expressao . '%' expressao  (79)
	expressao : expressao . '+' expressao  (80)
	expressao : expressao . '-' expressao  (81)
	expressao : expressao . '>' expressao  (82)
	expressao : expressao . '<' expressao  (83)
	expressao : expressao . EQ expressao  (84)
	expressao : expressao . NE expressao  (85)
	expressao : expressao . GE expressao  (86)
	expressao : expressao . LE expressao  (87)
	expressao : expressao . '&' expressao  (88)
	expressao : expressao . '|' expressao  (89)
	expressao : expressao . '!'  (91)

	THEN  shift 123
	GE  shift 96
	LE  shift 97
	EQ  shift 98
	NE  shift 99
	'|'  shift 100
	'&'  shift 101
	'>'  shift 102
	'<'  shift 103
	'+'  shift 104
	'-'  shift 105
	'*'  shift 106
	'/'  shift 107
	'%'  shift 108
	'!'  shift 109
	.  error


state 78
	instrucao : DO $$4 . instrucao $$5 WHILE expressao ';'  (47)

	error  shift 44
	INT  shift 45
	NUM  shift 46
	IDENTIF  shift 47
	STRN  shift 48
	IF  shift 49
	DO  shift 50
	FOR  shift 51
	BREAK  shift 52
	CONTINUE  shift 53
	INC  shift 54
	DEC  shift 55
	'&'  shift 56
	'~'  shift 57
	'-'  shift 58
	'*'  shift 59
	'('  shift 60
	'{'  shift 39
	.  error

	left_value  goto 62
	expressao  goto 63
	corpo  goto 64
	instrucao  goto 124


state 79
	left_value : IDENTIF .  (94)
	left_value : IDENTIF . '[' expressao ']'  (95)

	'['  shift 75
	THEN  reduce 94
	DO  reduce 94
	IN  reduce 94
	STEP  reduce 94
	UPTO  reduce 94
	DOWNTO  reduce 94
	GE  reduce 94
	LE  reduce 94
	EQ  reduce 94
	NE  reduce 94
	'|'  reduce 94
	'&'  reduce 94
	'>'  reduce 94
	'<'  reduce 94
	'+'  reduce 94
	'-'  reduce 94
	'*'  reduce 94
	'/'  reduce 94
	'%'  reduce 94
	'!'  reduce 94
	')'  reduce 94
	']'  reduce 94
	';'  reduce 94
	','  reduce 94


state 80
	instrucao : FOR left_value . IN expressao updown expressao step DO $$6 instrucao  (49)

	IN  shift 125
	.  error


state 81
	instrucao : BREAK INT . ';'  (52)

	';'  shift 126
	.  error


state 82
	instrucao : BREAK ';' .  (54)

	.  reduce 54


state 83
	instrucao : CONTINUE INT . ';'  (53)

	';'  shift 127
	.  error


state 84
	instrucao : CONTINUE ';' .  (55)

	.  reduce 55


state 85
	expressao : INC left_value .  (74)

	.  reduce 74


state 86
	expressao : DEC left_value .  (73)

	.  reduce 73


state 87
	expressao : '&' left_value .  (92)

	.  reduce 92


state 88
	expressao : expressao . '*' expressao  (77)
	expressao : expressao . '/' expressao  (78)
	expressao : expressao . '%' expressao  (79)
	expressao : expressao . '+' expressao  (80)
	expressao : expressao . '-' expressao  (81)
	expressao : expressao . '>' expressao  (82)
	expressao : expressao . '<' expressao  (83)
	expressao : expressao . EQ expressao  (84)
	expressao : expressao . NE expressao  (85)
	expressao : expressao . GE expressao  (86)
	expressao : expressao . LE expressao  (87)
	expressao : expressao . '&' expressao  (88)
	expressao : expressao . '|' expressao  (89)
	expressao : '~' expressao .  (90)
	expressao : expressao . '!'  (91)

	GE  shift 96
	LE  shift 97
	EQ  shift 98
	NE  shift 99
	'>'  shift 102
	'<'  shift 103
	'+'  shift 104
	'-'  shift 105
	'*'  shift 106
	'/'  shift 107
	'%'  shift 108
	'!'  shift 109
	THEN  reduce 90
	DO  reduce 90
	STEP  reduce 90
	UPTO  reduce 90
	DOWNTO  reduce 90
	'|'  reduce 90
	'&'  reduce 90
	')'  reduce 90
	']'  reduce 90
	';'  reduce 90
	','  reduce 90


state 89
	expressao : '-' expressao .  (72)
	expressao : expressao . '*' expressao  (77)
	expressao : expressao . '/' expressao  (78)
	expressao : expressao . '%' expressao  (79)
	expressao : expressao . '+' expressao  (80)
	expressao : expressao . '-' expressao  (81)
	expressao : expressao . '>' expressao  (82)
	expressao : expressao . '<' expressao  (83)
	expressao : expressao . EQ expressao  (84)
	expressao : expressao . NE expressao  (85)
	expressao : expressao . GE expressao  (86)
	expressao : expressao . LE expressao  (87)
	expressao : expressao . '&' expressao  (88)
	expressao : expressao . '|' expressao  (89)
	expressao : expressao . '!'  (91)

	.  reduce 72


state 90
	expressao : '*' left_value .  (93)

	.  reduce 93


state 91
	expressao : '(' expressao . ')'  (70)
	expressao : expressao . '*' expressao  (77)
	expressao : expressao . '/' expressao  (78)
	expressao : expressao . '%' expressao  (79)
	expressao : expressao . '+' expressao  (80)
	expressao : expressao . '-' expressao  (81)
	expressao : expressao . '>' expressao  (82)
	expressao : expressao . '<' expressao  (83)
	expressao : expressao . EQ expressao  (84)
	expressao : expressao . NE expressao  (85)
	expressao : expressao . GE expressao  (86)
	expressao : expressao . LE expressao  (87)
	expressao : expressao . '&' expressao  (88)
	expressao : expressao . '|' expressao  (89)
	expressao : expressao . '!'  (91)

	GE  shift 96
	LE  shift 97
	EQ  shift 98
	NE  shift 99
	'|'  shift 100
	'&'  shift 101
	'>'  shift 102
	'<'  shift 103
	'+'  shift 104
	'-'  shift 105
	'*'  shift 106
	'/'  shift 107
	'%'  shift 108
	'!'  shift 109
	')'  shift 128
	.  error


state 92
	expressao : left_value INC .  (75)

	.  reduce 75


state 93
	expressao : left_value DEC .  (76)

	.  reduce 76


state 94
	expressao : left_value ATRIB . expressao  (71)

	INT  shift 45
	NUM  shift 46
	IDENTIF  shift 47
	STRN  shift 48
	INC  shift 54
	DEC  shift 55
	'&'  shift 56
	'~'  shift 57
	'-'  shift 58
	'*'  shift 59
	'('  shift 60
	.  error

	left_value  goto 76
	expressao  goto 129


state 95
	instrucao : left_value '#' . expressao ';'  (56)

	INT  shift 45
	NUM  shift 46
	IDENTIF  shift 47
	STRN  shift 48
	INC  shift 54
	DEC  shift 55
	'&'  shift 56
	'~'  shift 57
	'-'  shift 58
	'*'  shift 59
	'('  shift 60
	.  error

	left_value  goto 76
	expressao  goto 130


state 96
	expressao : expressao GE . expressao  (86)

	INT  shift 45
	NUM  shift 46
	IDENTIF  shift 47
	STRN  shift 48
	INC  shift 54
	DEC  shift 55
	'&'  shift 56
	'~'  shift 57
	'-'  shift 58
	'*'  shift 59
	'('  shift 60
	.  error

	left_value  goto 76
	expressao  goto 131


state 97
	expressao : expressao LE . expressao  (87)

	INT  shift 45
	NUM  shift 46
	IDENTIF  shift 47
	STRN  shift 48
	INC  shift 54
	DEC  shift 55
	'&'  shift 56
	'~'  shift 57
	'-'  shift 58
	'*'  shift 59
	'('  shift 60
	.  error

	left_value  goto 76
	expressao  goto 132


state 98
	expressao : expressao EQ . expressao  (84)

	INT  shift 45
	NUM  shift 46
	IDENTIF  shift 47
	STRN  shift 48
	INC  shift 54
	DEC  shift 55
	'&'  shift 56
	'~'  shift 57
	'-'  shift 58
	'*'  shift 59
	'('  shift 60
	.  error

	left_value  goto 76
	expressao  goto 133


state 99
	expressao : expressao NE . expressao  (85)

	INT  shift 45
	NUM  shift 46
	IDENTIF  shift 47
	STRN  shift 48
	INC  shift 54
	DEC  shift 55
	'&'  shift 56
	'~'  shift 57
	'-'  shift 58
	'*'  shift 59
	'('  shift 60
	.  error

	left_value  goto 76
	expressao  goto 134


state 100
	expressao : expressao '|' . expressao  (89)

	INT  shift 45
	NUM  shift 46
	IDENTIF  shift 47
	STRN  shift 48
	INC  shift 54
	DEC  shift 55
	'&'  shift 56
	'~'  shift 57
	'-'  shift 58
	'*'  shift 59
	'('  shift 60
	.  error

	left_value  goto 76
	expressao  goto 135


state 101
	expressao : expressao '&' . expressao  (88)

	INT  shift 45
	NUM  shift 46
	IDENTIF  shift 47
	STRN  shift 48
	INC  shift 54
	DEC  shift 55
	'&'  shift 56
	'~'  shift 57
	'-'  shift 58
	'*'  shift 59
	'('  shift 60
	.  error

	left_value  goto 76
	expressao  goto 136


state 102
	expressao : expressao '>' . expressao  (82)

	INT  shift 45
	NUM  shift 46
	IDENTIF  shift 47
	STRN  shift 48
	INC  shift 54
	DEC  shift 55
	'&'  shift 56
	'~'  shift 57
	'-'  shift 58
	'*'  shift 59
	'('  shift 60
	.  error

	left_value  goto 76
	expressao  goto 137


state 103
	expressao : expressao '<' . expressao  (83)

	INT  shift 45
	NUM  shift 46
	IDENTIF  shift 47
	STRN  shift 48
	INC  shift 54
	DEC  shift 55
	'&'  shift 56
	'~'  shift 57
	'-'  shift 58
	'*'  shift 59
	'('  shift 60
	.  error

	left_value  goto 76
	expressao  goto 138


state 104
	expressao : expressao '+' . expressao  (80)

	INT  shift 45
	NUM  shift 46
	IDENTIF  shift 47
	STRN  shift 48
	INC  shift 54
	DEC  shift 55
	'&'  shift 56
	'~'  shift 57
	'-'  shift 58
	'*'  shift 59
	'('  shift 60
	.  error

	left_value  goto 76
	expressao  goto 139


state 105
	expressao : expressao '-' . expressao  (81)

	INT  shift 45
	NUM  shift 46
	IDENTIF  shift 47
	STRN  shift 48
	INC  shift 54
	DEC  shift 55
	'&'  shift 56
	'~'  shift 57
	'-'  shift 58
	'*'  shift 59
	'('  shift 60
	.  error

	left_value  goto 76
	expressao  goto 140


state 106
	expressao : expressao '*' . expressao  (77)

	INT  shift 45
	NUM  shift 46
	IDENTIF  shift 47
	STRN  shift 48
	INC  shift 54
	DEC  shift 55
	'&'  shift 56
	'~'  shift 57
	'-'  shift 58
	'*'  shift 59
	'('  shift 60
	.  error

	left_value  goto 76
	expressao  goto 141


state 107
	expressao : expressao '/' . expressao  (78)

	INT  shift 45
	NUM  shift 46
	IDENTIF  shift 47
	STRN  shift 48
	INC  shift 54
	DEC  shift 55
	'&'  shift 56
	'~'  shift 57
	'-'  shift 58
	'*'  shift 59
	'('  shift 60
	.  error

	left_value  goto 76
	expressao  goto 142


state 108
	expressao : expressao '%' . expressao  (79)

	INT  shift 45
	NUM  shift 46
	IDENTIF  shift 47
	STRN  shift 48
	INC  shift 54
	DEC  shift 55
	'&'  shift 56
	'~'  shift 57
	'-'  shift 58
	'*'  shift 59
	'('  shift 60
	.  error

	left_value  goto 76
	expressao  goto 143


state 109
	expressao : expressao '!' .  (91)

	.  reduce 91


state 110
	instrucao : expressao ';' .  (50)

	.  reduce 50


state 111
	corpo : '{' instrucoes '}' .  (39)

	.  reduce 39


state 112
	instrucoes : instrucoes instrucao .  (42)

	.  reduce 42


state 113
	corpo : '{' pars2 '}' .  (38)

	.  reduce 38


state 114
	corpo : '{' pars2 instrucoes . '}'  (40)
	instrucoes : instrucoes . instrucao  (42)
